--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ color: #404bbf;
 .features_description {
         line-height: 1.5;
         letter-spacing: 0.02em;
-        color: #2e2f42;
+        color: #434455;
 }
 
 
@@ -142,7 +142,6 @@ color: #404bbf;
         letter-spacing: 0.02em;
         text-align: center;
         text-transform: capitalize;
-        color: #2e2f42;
 }
 
 .team_item {}
