--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,7 @@ ul{
         letter-spacing: 0.03em;
         font-style: normal;
         color: #4d5ae5;
+        text-transform: uppercase;
         
 }
 
@@ -77,6 +78,7 @@ color: #404bbf;
 .hero {
 
     background-color: #2E2F42;
+    
 }
 
 .hero_name {
@@ -87,13 +89,12 @@ color: #404bbf;
         letter-spacing: 0.02em;
         color: #ffffff;
         text-align: center;
+        text-transform: uppercase;
 }
 
 .hero_button {
 
     background-color: #4D5AE5;
-    width: 169px;
-        height: 56px;
         color: #ffffff;
         font-weight: 500;
         line-height: 1.5;
@@ -121,6 +122,7 @@ color: #404bbf;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .features_description {
@@ -159,6 +161,7 @@ color: #404bbf;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .team_descrition {
@@ -187,6 +190,7 @@ color: #404bbf;
         font-weight: 500;
         line-height: 1.2;
         letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .portfolio_description {
