--- a/css/style.css
+++ b/css/style.css
@@ -121,10 +121,10 @@ address {
 }
 
 .team_item {
-    background-color: #FFFFFF;
+    
 }
 
-.team_block {}
+.team_block {background-color: #FFFFFF;}
 
 .team_photo {}
 
