--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a{
 }
 .header{
     border-bottom: 1px solid #e7e9fc;
+   
     
     
 }
@@ -45,6 +46,10 @@ a{
         max-width: 1158px;
         padding: 0 15px;
             margin: 0 auto;
+            
+}
+.nav_cont{
+    display: flex;
 }
 
 .nav {
@@ -170,8 +175,19 @@ address {
     
 }
 .visually-hidden{
-    display: none;
-}
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            margin: -1px;
+            border: 0;
+            padding: 0;
+    
+            white-space: nowrap;
+            clip-path: inset(100%);
+            clip: rect(0 0 0 0);
+            overflow: hidden;
+        }
+
 
 .features_item {
     display: flex;
@@ -289,7 +305,7 @@ row-gap: 48px;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
+    
 
 }
 
@@ -299,6 +315,7 @@ row-gap: 48px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color:#2e2f42;
+    margin-bottom: 8px;
 }
 
 .portfolio_description {
