--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ a{
         max-width: 1158px;
         padding: 0 15px;
             margin: 0 auto;
+            display: flex;
             
 }
 .nav_cont{
