--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,11 @@ a{
 .header{
     border-bottom: 1px solid #e7e9fc;
    
+
     
-    
+}
+.header .container {
+    display: flex;
 }
 .container{
         max-width: 1158px;
