--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ a{
 }
 .header .container {
     display: flex;
+    align-items: center;
 }
 .container{
         max-width: 1158px;
@@ -96,6 +97,7 @@ a{
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
+    display: block;
     
 
 }
@@ -110,11 +112,14 @@ a{
 
 address {
     font-style: normal;
+    margin-left: auto;
 }
 
 .address_item {
     display: flex;
     gap: 40px;
+
+    
     
     
 }
@@ -123,6 +128,8 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;
+    padding: 24px 0;
+    display: block;
 }
 
 .address_link:hover{
@@ -148,6 +155,9 @@ address {
     letter-spacing: 0.02em;
     color: #ffffff;
     max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
     
     
     
@@ -165,6 +175,8 @@ address {
     height: 56px;
     border: none;
     border-radius: 4px;
+    margin: 0 auto;
+
 
     
 }
@@ -219,7 +231,7 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;
-    width: 264px;
+    
 }
 
 .team {
@@ -323,7 +335,7 @@ row-gap: 48px;
     margin-bottom: 8px;
 }
 
-.portfolio_description {
+.portfolio_p {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:#434455;
