--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ address {
         background-size: cover;
     align-content: center;
     padding: 188px 0;
+    box-shadow: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero_name {
@@ -384,7 +385,7 @@ row-gap: 48px;
 }
 .portfolio_item{
     width: calc((100% - 48px) / 3);
-    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-wrap{
@@ -413,7 +414,7 @@ row-gap: 48px;
 .portfolio_item:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);;
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio_item:hover .portfolio-cover-text{
