--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,8 @@ address {
     align-content: center;
     padding: 188px 0;
     box-shadow: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .hero_name {
@@ -198,8 +200,9 @@ address {
     height: 56px;
     border: none;
     border-radius: 4px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin: 0 auto;
+
     
 }
 
