--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,283 @@ transform: translateY(0);
     max-width: 264px;
 }
 
-.footer-link{
+.footer_form_wrap {
+    margin-left: 80px;
+}
+
+.footer_subtitle{
+    font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin-bottom: 16px;
+}
+
+.footer_form {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.footer_input {
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    padding-left: 16px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.footer_input::placeholder {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.footer_button {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    border-radius: 4px;
+    padding: 8px 24px;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: #4d5ae5;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer_button:hover, .footer_button:focus{
+    background-color: #404BBF;
+
+}
+
+.footer_btn_icon {
+    fill: #ffffff;
+    margin-left: 16px;
+}
+
+
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    height: 100%;
+    width: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    
+    
+}
+.is-open {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 408px;
+    height: 584px;
+
+    border-radius: 4px;
+    transform: translate(-50%, -50%);
+
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+    background-color: #FCFCFC;
+    padding: 72px 24px 24px 24px;
+
+}
+
+.modal_close{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+
+    background-color: rgb(231, 233, 252);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.closed{
+    fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+
+.modal_close:hover, .modal_close:focus {
+    background-color: rgb(64, 75, 191);
+    border: none;
+}
+
+.modal_close:hover .closed, .modal_close:focus .closed{
+    fill: #fff;
+}
+
+.modal_text{
+    display: flex;
+    justify-content: center;
+    font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        margin-bottom: 16px;
+}
+
+
+.modal_form{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.form_label{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    border-radius: 4px;
+
+}
+
+
+
+.label_text{
+    color: #8E8F99;
+    font-size: 12px;
+        font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+}
+
+.label_input{
+    position: relative;
+    
+    
+}
+
+.form_input{
+    width: 100%;
+    height: 40px;
+        border: 1px solid rgba(46, 47, 66, 0.4);
+        border-radius: 4px;
+        padding-left: 39px;
+        outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form_input:focus{
+    border-color: #4D5AE5;
+}
+
+.form_input:focus + .label_icon{
+    fill: #4d5ae5;
+}
+
+
+.label_icon{
+    position: absolute;
+    left: 19px;
+    top: 50%;
+        transform: translateY(-50%);
     
 
 }
+
+.form_input.comment{
+    height: 120px;
+    resize: none;
+    padding-left: 0;
+    padding: 8px 16px;
+}
+
+.form_input.comment::placeholder{
+    color: #8E8F99;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+}
+
+.form_input_checkbox{
+    
+    
+
+}
+
+.form_label_checkbox{
+   
+   
+    color: #8E8F99;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+
+}
+
+.form_checkbox_link{
+    text-decoration: underline;
+    color: #4D5AE5;
+}
+.form_button{
+    background-color: #4D5AE5;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #ffffff;
+        cursor: pointer;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        margin: 0 auto;
+        margin-top: 16px;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.form_button:hover {
+    background-color: #404BBF;
+}
+
+.form_button:focus {
+    background-color: #404BBF;
+}
+
+
+
+
+
+
+    
