--- a/css/style.css
+++ b/css/style.css
@@ -605,8 +605,7 @@ transform: translateY(0);
     opacity: 0;
         visibility: hidden;
         pointer-events: none;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     
     
@@ -623,7 +622,7 @@ transform: translateY(0);
     left: 50%;
 
     width: 408px;
-    height: 584px;
+    min-height: 584px;
 
     border-radius: 4px;
     transform: translate(-50%, -50%);
@@ -640,6 +639,8 @@ transform: translateY(0);
     right: 24px;
     width: 24px;
     height: 24px;
+    padding: 0;
+    cursor: pointer;
 
     background-color: rgb(231, 233, 252);
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -647,7 +648,7 @@ transform: translateY(0);
     display: flex;
         justify-content: center;
         align-items: center;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -674,6 +675,8 @@ transform: translateY(0);
         line-height: 1.5;
         letter-spacing: 0.02em;
         margin-bottom: 16px;
+        text-align: center;
+        color:#2E2F42;
 }
 
 
@@ -683,23 +686,21 @@ transform: translateY(0);
     gap: 8px;
 }
 
+.form_con{
+    margin-bottom: 8px;
+}
+
 .form_label{
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
     border-radius: 4px;
-
-}
-
-
-
-.label_text{
-    color: #8E8F99;
     font-size: 12px;
-        font-weight: 400;
-        line-height: 1.17;
-        letter-spacing: 0.04em;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color:#8e8f99;
+    display: block;
+    margin-bottom: 4px;
+
 }
+
 
 .label_input{
     position: relative;
@@ -712,7 +713,8 @@ transform: translateY(0);
     height: 40px;
         border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
-        padding-left: 39px;
+        background-color: transparent;
+        padding-left: 38px;
         outline: transparent;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -728,33 +730,56 @@ transform: translateY(0);
 
 .label_icon{
     position: absolute;
-    left: 19px;
+    left: 16px;
     top: 50%;
         transform: translateY(-50%);
-    
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.form_con_comment{
+    margin-bottom: 16px;
 }
 
 .form_input.comment{
+    width: 100%;
     height: 120px;
-    resize: none;
-    padding-left: 0;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
     padding: 8px 16px;
-}
-
-.form_input.comment::placeholder{
-    color: #8E8F99;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 1.17;
-        letter-spacing: 0.04em;
-}
-
-.form_input_checkbox{
+    resize: none;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     
+}
+
+.form_input.comment:focus{
+    border-color: #4D5AE5;
+}
+
+.form_con_checkbox{
+    margin-bottom: 24px;
 
 }
+
+.label_chb_span{
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
 
 .form_label_checkbox{
    
@@ -765,6 +790,12 @@ transform: translateY(0);
         line-height: 1.17;
         letter-spacing: 0.04em;
 
+}
+
+.label_chb_span:checked{
+    background-color:#404bbf;
+    border: none;
+    fill: #F4F4FD;
 }
 
 .form_checkbox_link{
