--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,7 @@ transform: translateY(0);
     opacity: 0;
         visibility: hidden;
         pointer-events: none;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     
     
@@ -630,6 +630,7 @@ transform: translateY(0);
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
     background-color: #FCFCFC;
     padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -792,7 +793,7 @@ transform: translateY(0);
 
 }
 
-.label_chb_span:checked{
+.form_check:checked + .form_label_checkbox > .label_chb_span{
     background-color:#404bbf;
     border: none;
     fill: #F4F4FD;
