--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ address {
     padding: 120px 0;
     
 }
-.visually_hidden{
+.visually-hidden{
             position: absolute;
             width: 1px;
             height: 1px;
