--- a/css/style.css
+++ b/css/style.css
@@ -790,6 +790,10 @@ a {
 
 .portfolio_item:hover .portfolio-cover-text {
     transform: translateY(0);
+    
+}
+.portfolio_item:hover{
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 
@@ -841,7 +845,14 @@ a {
     .portfolio_item {
         width: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: none;
     }
+
+    .
+
+
+
+    
 }
 
 
