--- a/css/style.css
+++ b/css/style.css
@@ -164,16 +164,18 @@ a {
 
 
 
-.address_list_mob {}
+.address_list_mob {
+    display: flex;
+    flex-direction: column-reverse;
+    row-gap: 24px;
+}
 
 .address_link_mob.current {
     position: relative;
     color: #404bbf;
 }
 
-.address-item-mob:not(:last-child) {
-    margin-bottom: 24px;
-}
+
 
 .address_link_mob {
     font-weight: 500;
@@ -200,16 +202,19 @@ a {
     margin-top: 48px;
 
 }
+.link{
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #4D5AE5;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .menu_item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #4D5AE5;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .menu_link .link:hover {
@@ -407,7 +412,6 @@ a {
 .hero {
     background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-mob.jpg);
-    min-height: 432px;
     max-width: 320px;
     background-repeat: no-repeat;
     background-position: center center;
@@ -417,13 +421,11 @@ a {
     box-shadow: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 96px;
 }
 
 @media screen and (min-resolution: 2x) {
     .hero {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-mob2x.jpg);
-        min-height: 432px;
 
     }
 }
@@ -498,6 +500,7 @@ a {
     .hero {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
         max-width: 1440px;
+        padding: 188px 0;
 
     }
 
@@ -515,7 +518,7 @@ a {
 /* FEATURES */
 
 .features {
-    margin-bottom: 96px;
+    padding: 96px 0;
 }
 
 .visually-hidden {
@@ -583,6 +586,10 @@ a {
 }
 
 @media screen and (min-width: 1158px) {
+    .features {
+            padding: 120px 0;
+        }
+
     .features_link {
         width: calc((100% - 72px) / 4);
 
@@ -644,7 +651,7 @@ a {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 72px;
 
 
 }
@@ -728,16 +735,26 @@ a {
 
     .team_item {
         row-gap: 64px;
+        column-gap: 24px;
     }
 
+}
+
+@media screen and (min-width:1158px) {
+    .team {
+            padding: 120px 0;
+        }
+         .team_item {
+             row-gap: 0;
+             column-gap: 24px;
+         }
 }
 
 
 /* PORTFOLIO */
 
 .portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 96px 0;
 }
 
 .portfolio_logo {
@@ -768,6 +785,11 @@ a {
     position: relative;
     overflow: hidden;
 
+}
+
+.portfolio_photo{
+    max-width: 100%;
+    height: auto;
 }
 
 .portfolio-cover-text {
@@ -838,6 +860,9 @@ a {
 }
 
 @media screen and (min-width:1158px) {
+    .portfolio {
+            padding: 120px 0;
+        }
     .portfolio_list {
         row-gap: 48px;
     }
@@ -848,7 +873,7 @@ a {
         box-shadow: none;
     }
 
-    .
+
 
 
 
@@ -1034,10 +1059,12 @@ a {
 
     .footer-cont {
         align-items: start;
+        margin-bottom: 0;
     }
 
     .footer_soc_link {
         align-items: start;
+        margin-bottom: 0;
     }
 
     .footer_form_wrap {
@@ -1056,12 +1083,17 @@ a {
 }
 
 @media screen and (min-width:1158px) {
+    .footer{
+        padding: 100px 0;
+    }
     .footer .container {
         flex-wrap: nowrap;
         padding-left: 15px;
         align-items: baseline;
         column-gap: normal;
+       
     }
+
 
     .footer_soc_link{
         margin-left: 120px;
@@ -1119,7 +1151,7 @@ a {
 
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
     background-color: #FCFCFC;
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
@@ -1320,6 +1352,7 @@ a {
 @media screen and (min-width:768px) {
     .modal {
         width: 408px;
+        padding: 72px 24px 24px 24px;
 
     }
 
